SVN
* 2007-04-24: Made changes necessary to get normaddr service tests to pass
